--- a/_config.yml
+++ b/_config.yml
@@ -73,6 +73,7 @@ width: normal
 # if you don't need "about" or "blog", comment them out below
 about: true
 blog: true
+gavagai: true
 
 # do you want to show the "read time" of the posts?
 read-time: true
