--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ url: https://jamesbrandscience.github.io
 permalink: /:title/
 
 # To enable google analytics, supply your token below
-# analytics-google: 'UA-MYANALYTICS'
+analytics-google: 'UA-98738692-1'
 
 # To enable piwik tracking, supply your url & site ID below
 # analytics-piwik-url: 'piwik.my-host.com'
