--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ name: James Brand
 bio: language / learning / evolution
 
 # twitter summary info
-description: Personal homepage for James Brand
+description: Personal homepage for James Brand psychology at Lancaster University
 
 # if it's an external image, update below for true
 # better with square images
