--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # main text of home
 name: James Brand
-bio: language / learning / evolution
+bio: language / cognition / evolution
 
 # twitter summary info
 description: Personal homepage for James Brand psychology at Lancaster University
