--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ github: jamesbrandscience
 # reddit: username
 #medium: medium
 # vimeo: myvimeo
-email: j.brand@lancaster.ac.uk
+email: james.brand@canterbury.ac.nz
 
 authors:
     jamesbrand:
