--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ url: https://jamesbrandscience.github.io
 permalink: /:title/
 
 # To enable google analytics, supply your token below
-analytics-google: 'UA-98738692-1'
+analytics-google: 'G-LNN9QWCM4X'
 
 # To enable piwik tracking, supply your url & site ID below
 # analytics-piwik-url: 'piwik.my-host.com'
